# mcp-hub

./: .coverage  .gitignore  README.md  README_EN.md  launch-plan.md  plan.md  pyproject.toml  pyproject.toml.bak  pytest.ini
.github/workflows/: security-audit.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  SECURITY.md  THREAT_MODEL.md
registry/: tools.json
src/mcp_hub/: __init__.py  cli.py  cli.py.bak  cli.py.cli_config_show.bak  cli.py.cli_error_json.bak  cli.py.cli_install_dryrun.bak  cli.py.cli_misc.bak  cli.py.cli_search_list.bak  cli.py.v2.bak  config.py  constants.py  dependency_mapper.py  dependency_vuln_mapper.py  dependency_vuln_mapping.py  env_security.py  installer.py  installer.py.v3.bak  offline_vuln_db.py  osv_client.py  registry.py  registry.py.bak  registry.py.v2.bak  scan_cache.py  secrets.py  security.py  security.py.bak  utils.py  vulnerability_models.py  vulnerability_normalizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_constants.py  test_installer.py  test_osv_client.py  test_osv_integration.py  test_registry.py  test_scan_cache.py  test_security.py  test_utils.py
