[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcp-hub"
version = "0.2.0"
description = "MCP Hub - Discover, install, and manage MCP tools."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    "MCP Hub Team <team@mcphub.dev>",
]
keywords = [
    "mcp",
    "model-context-protocol",
    "tools",
    "cli",
    "registry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [{include = "mcp_hub", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = ">=0.12.0,<1.0.0"
rich = ">=13.0.0,<14.0.0"
requests = ">=2.31.0,<3.0.0"
pydantic = ">=2.0.0,<3.0.0"
semver = ">=3.0.0,<4.0.0"
filelock = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
pytest-cov = ">=4.0,<7.0"
black = ">=23.0.0,<25.0"
ruff = ">=0.6.0,<1.0"
mypy = ">=1.11.0,<2.0"

[tool.poetry.scripts]
mcp-hub = "mcp_hub.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/mcp_hub"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
